# ppt-reel-converter

./: .env.example  .gitignore  BUILD.md  README.md  STATUS.md  index.html  launch.sh  output_model_tests.txt  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
python/: pyproject.toml  requirements.txt
python/reel_converter/: __init__.py  __main__.py  cli.py
python/reel_converter/export/: __init__.py  final_assembler.py  png_exporter.py
python/reel_converter/gate1_scan/: __init__.py  image_extractor.py  number_extractor.py  pptx_parser.py  scanner.py  shape_classifier.py  theme_extractor.py
python/reel_converter/gate2_plan/: __init__.py  ai_agent.py  content_condenser.py  content_editor.py  content_splitter.py  coverage_checker.py  planner.py  rule_engine.py
python/reel_converter/gate3_render/: __init__.py  content_fitter.py  font_fallback.py  generator.py  placeholder_filler.py  png_export.py  pptx_writer.py  render_validator.py  renderer.py  safe_zones.py
python/reel_converter/gate4_verify/: __init__.py  content_integrity.py  image_checker.py  number_checker.py  scoring.py  theme_consistency.py  typography_checker.py  verifier.py  visual_validator.py  whitespace_analyzer.py
python/reel_converter/pipeline/: __init__.py  approval_manager.py  orchestrator.py  report_generator.py
python/reel_converter/profile/: __init__.py  generate_config.py  profile_template.py
python/reel_converter/schemas/: __init__.py  approval.py  fingerprint.py  generation_result.py  render_result.py  scene_plan.py  slide_model.py  template_config.py  (+1 more)
(+50 files in other folders)
